First delivery of final project

--- a/game_of_words/index.html
+++ b/game_of_words/index.html
@@ -14,8 +14,9 @@
         </figure>
         <h1>GAME OF WORDS</h1>
         <p>Un juego para adivinar palabras</p>
+        <p id="clue"></p>
         <div class="btn-wrapper">
-            <button type="button">¡COMENZAR!</button>
+            <button type="button" onclick="play()">¡ADIVINAR!</button>
         </div>
     </div>
     <script src="javascript.js">
