--- a/game_of_words/index.html
+++ b/game_of_words/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Game of Words</title>
 </head>
 <body>
     <div class="wrapper-container">
         <div class="main-title">
             <figure class="logo">
-                <img src="img/question.png">   
+                <img src="./styles/img/question.png">   
             </figure>
             <h1>GAME OF WORDS</h1>
             <h2>Un juego para adivinar palabras</h2>
-            <img src="img/chain.png" class="chain-left">
-            <img src="img/chain.png" class="chain-right">
+            <img src="./styles/img/chain.png" class="chain-left">
+            <img src="./styles/img/chain.png" class="chain-right">
         </div>
         <div class="wrapper-guess">
             <p id="text-congratulation"></p>
@@ -24,7 +24,7 @@
         </div>  
         <div class="inputs-wrapper">
             <figure class="icon-sandglass">
-                <img id="sandglass" class="icon" src="img/sandglass.png">   
+                <img id="sandglass" class="icon" src="./styles/img/sandglass.png">   
             </figure>
             <div class="btn-wrapper">
                 <input id="write-answer" type="text" name="fname" class="guess-word" placeholder="Escribe tu respuesta aquí...">
@@ -34,6 +34,6 @@
             <p id="text-tries"></p>
         </div>  
     </div>
-    <script src="javascript.js"></script>
+    <script src="./javascript/javascript.js"></script>
 </body>
 </html>
