--- a/game_of_words/login.html
+++ b/game_of_words/login.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="icon" type="image/jpg" href="../styles/img/question.ico"/>
+    <link rel="stylesheet" href="./styles/styles.css" href="">
+    <link rel="icon" type="image/jpg" href="./styles/img/question.ico"/>
     <title>Game of Words</title>
 </head>
 <body>
     <section class="login">
         <div class="login-container">
-            <img src="../styles/img/question.png">
+            <img src="./styles/img/question.png">
             <h2>¡Bienvenido a Game of Words!</h2>
             <p>¿Cómo te llamás?</p>
-            <form action=".././index.html">
+            <form action="./pages/index.html">
                 <input type="text" placeholder="Nombre" class="input-login" id="btnName" required>
                 <select name="level" id="btnLevel" required>
                     <option value="0">Principiante</option>
@@ -25,6 +25,6 @@
             </form>
         </div>
     </section>
-    <script src="../javascript/login.js"></script>
+    <script src="./javascript/login.js"></script>
 </body>
 </html>
