--- a/game_of_words/login.html
+++ b/game_of_words/login.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css" href="">
     <link rel="icon" type="image/jpg" href="./styles/img/question.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Game of Words</title>
 </head>
 <body>
     <section class="login">
         <div class="login-container">
-            <img src="./styles/img/question.png">
-            <h2>¡Bienvenido a Game of Words!</h2>
-            <p>¿Cómo te llamás?</p>
-            <form action="./pages/index.html">
+            <img src="./styles/img/question.png" class="animate__animated animate__rubberBand">
+            <h2 class="animate__animated animate__rubberBand">¡Bienvenido a Game of Words!</h2>
+            <p class="animate__animated animate__rubberBand">¿Cómo te llamás?</p>
+            <form action="./pages/index.html" class="animate__animated animate__rubberBand">
                 <input type="text" placeholder="Nombre" class="input-login" id="btnName" required>
                 <select name="level" id="btnLevel" required>
                     <option value="0">Principiante</option>
