Added index animations

--- a/game_of_words/pages/index.html
+++ b/game_of_words/pages/index.html
@@ -17,14 +17,14 @@
             </figure>
             <h1 class="animate__animated animate__bounce">GAME OF WORDS</h1>
             <h2 class="animate__animated animate__flipInX">Un juego para adivinar palabras</h2>
-            <img src="../styles/img/chain.png" class="chain-left">
-            <img src="../styles/img/chain.png" class="chain-right">
+            <img src="../styles/img/chain.png" class="chain-left animate__animated animate__fadeInDown">
+            <img src="../styles/img/chain.png" class="chain-right animate__animated animate__fadeInDown">
         </div>
-        <div class="wrapper-guess">
+        <div class="wrapper-guess animate__animated animate__rotateIn">
             <p id="text-congratulation"></p>
             <p id="clue"></p>
         </div>  
-        <div class="inputs-wrapper">
+        <div class="inputs-wrapper animate__animated animate__rollIn">
             <figure class="icon-sandglass">
                 <img id="sandglass" class="icon" src="../styles/img/sandglass.png">   
             </figure>
