Animation changed on input-wrapper

--- a/game_of_words/pages/index.html
+++ b/game_of_words/pages/index.html
@@ -20,11 +20,11 @@
             <img src="../styles/img/chain.png" class="chain-left animate__animated animate__fadeInDown">
             <img src="../styles/img/chain.png" class="chain-right animate__animated animate__fadeInDown">
         </div>
-        <div class="wrapper-guess animate__animated animate__rotateIn">
+        <div class="wrapper-guess animate__animated animate__bounceInDown">
             <p id="text-congratulation"></p>
             <p id="clue"></p>
         </div>  
-        <div class="inputs-wrapper animate__animated animate__rollIn">
+        <div class="inputs-wrapper animate__animated animate__flipInX">
             <figure class="icon-sandglass">
                 <img id="sandglass" class="icon" src="../styles/img/sandglass.png">   
             </figure>
@@ -33,7 +33,7 @@
                 <input id="btnGuess" type="button" onclick="guessWord()" value="¡ADIVINAR!" hidden></input>
                 <input id="btnStart" type="button" onclick="start()" value="¡NUEVO JUEGO!"></input>
             </div>
-            <p id="text-tries"></p>s
+            <p id="text-tries"></p>
         </div>  
     </div>
     <script src="../javascript/javascript.js"></script>
