--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="./styles/img/question.png" class="animate__animated animate__rubberBand">
             <h2 class="animate__animated animate__rubberBand">¡Bienvenido a Game of Words!</h2>
             <p class="animate__animated animate__rubberBand">¿Cómo te llamás?</p>
-            <form action="./pages/index.html" class="animate__animated animate__rubberBand">
+            <form action="./pages/game.html" class="animate__animated animate__rubberBand">
                 <input type="text" placeholder="Nombre" class="input-login" id="btnName" required>
                 <select name="level" id="btnLevel" required>
                     <option value="0">Principiante</option>
