--- a/pages/game.html
+++ b/pages/game.html
@@ -36,6 +36,6 @@
             <p id="text-tries"></p>
         </div>  
     </div>
-    <script src="../javascript/javascript.js"></script>
+    <script src="../javascript/game.js"></script>
 </body>
 </html>
